# forexnav_paper

./: .gitignore
.cursor/plans/: tune_minco_trajectory_smoothness_c7f4f5ee.plan.md
ForexNav-uav_sim/: .gitignore
ForexNav-uav_sim/src/: MINCO_INTEGRATION_SUMMARY.md
ForexNav-uav_sim/src/depth_image_converter/: CMakeLists.txt  package.xml
ForexNav-uav_sim/src/depth_image_converter/src/: depth_image_converter.cpp
ForexNav-uav_sim/src/fuel_planner/active_perception/: CMakeLists.txt
ForexNav-uav_sim/src/fuel_planner/bspline/: CMakeLists.txt
ForexNav-uav_sim/src/fuel_planner/bspline_opt/: CMakeLists.txt
ForexNav-uav_sim/src/fuel_planner/exploration_manager/: CMakeLists.txt
ForexNav-uav_sim/src/fuel_planner/path_searching/: CMakeLists.txt
ForexNav-uav_sim/src/fuel_planner/plan_env/: CMakeLists.txt
ForexNav-uav_sim/src/fuel_planner/plan_manage/: CMakeLists.txt  README.md
ForexNav-uav_sim/src/fuel_planner/poly_traj/: CMakeLists.txt
ForexNav-uav_sim/src/fuel_planner/traj_utils/: CMakeLists.txt
ForexNav-uav_sim/src/legged_simulator/legged_config/: CMakeLists.txt  README.md  (+1 more)
ForexNav-uav_sim/src/legged_simulator/legged_fake_simulator/: CMakeLists.txt  package.xml
ForexNav-uav_sim/src/legged_simulator/legged_fake_simulator/src/: fake_simulator_node.cpp
docs/: astar_optimization_contribution.md
src/legged_simulator/champ/: .gitmodules
src/nav_env/local_sensing/: CMakeLists.txt  package.xml
src/nav_env/local_sensing/params/: local_sensing.yaml
src/nav_env/local_sensing/src/: local_sensing_node.cpp
src/nav_env/map_loader/: CMakeLists.txt  package.xml
src/nav_env/map_loader/src/: map_loader_node.cpp
src/nav_env/nav_exp_env/: CMakeLists.txt  package.xml
src/nav_env/nav_exp_env/base_env/config/: nav_env.rviz
src/nav_env/nav_exp_env/base_env/launch/: benchmark.launch  forex_nav_legged.launch  joy_teleop.launch  nav_env.launch  nav_env_legged.launch  set_benchmark_points.launch
src/nav_env/nav_exp_env/base_env/scripts/: benchmark_recorder.py  clicked_point_to_pos_cmd.py  frtree_traj_cmd.py  gait_joint_publisher.py  ideal_path_astar.py  joy_teleop.py  odom_path_publisher.py  poly_traj_smoother.py  preset_goal_sender.py  rrtx_traj_cmd.py  set_benchmark_points.py  simple_odom_simulator.py
src/nav_env/nav_exp_env/cogniplan/config/: cogniplan.rviz
src/nav_env/nav_exp_env/cogniplan/launch/: cogniplan_nav.launch  cogniplan_nav_legged.launch
src/nav_env/nav_exp_env/cogniplan/scripts/: rl_planner_nav.py  waypoint_to_pos_cmd.py
src/nav_env/nav_exp_env/frtree/config/: frtree.rviz
src/nav_env/nav_exp_env/frtree/launch/: frtree_local_map_test.launch  frtree_nav.launch  frtree_nav_legged.launch
src/nav_env/nav_exp_env/proposed/config/: forex.rviz  forex_nav.rviz  forex_nav_paper.rviz  forex_nav_predict.rviz  frtree_nav.rviz
src/nav_env/nav_exp_env/proposed/launch/: forex_nav.launch
src/nav_env/nav_exp_env/rrtx/config/: rrtx.rviz
src/nav_env/nav_exp_env/rrtx/launch/: rrtx.launch  rrtx_nav_legged.launch
src/nav_env/nav_exp_env/traditional/config/: traditional.rviz
src/nav_env/nav_exp_env/traditional/launch/: traditional.launch  traditional_nav_legged.launch
src/planner/Frtree/: trouble.md
src/planner/Frtree/navigation_with_tree_of_free_regions/src/planner_controller/DecompROS/DecompUtil/: CMakeLists.txt  package.xml
src/planner/Frtree/navigation_with_tree_of_free_regions/src/planner_controller/DecompROS/DecompUtil/include/decomp_geometry/: polyhedron.h
src/planner/Frtree/navigation_with_tree_of_free_regions/src/planner_controller/planner_manage/: CMakeLists.txt  package.xml
src/planner/Frtree/navigation_with_tree_of_free_regions/src/planner_controller/planner_manage/include/SDPsolver/: SDPsolver.h
src/planner/Frtree/navigation_with_tree_of_free_regions/src/planner_controller/planner_manage/include/frtree_planner_manage/: dynamic_plan_container_pop.hpp  dynamic_plan_fsm_pop.h  dynamic_plan_manager_pop.h
src/planner/Frtree/navigation_with_tree_of_free_regions/src/planner_controller/planner_manage/launch/: pop_planner.launch
src/planner/Frtree/navigation_with_tree_of_free_regions/src/planner_controller/planner_manage/launch/config/: plan_fsm_param.yaml  pop_plan_fsm_param.yaml
src/planner/Frtree/navigation_with_tree_of_free_regions/src/planner_controller/planner_manage/src/: dynamic_plan_fsm_pop.cpp  dynamic_plan_manager_pop.cpp  global_graph.cpp
src/planner/Frtree/navigation_with_tree_of_free_regions/src/planner_controller/planner_manage/src/Altro/: altro_problem.cpp
src/planner/Frtree/navigation_with_tree_of_free_regions/src/planner_controller/planner_manage/src/SDPsolver/: SDPsolver.cpp
src/planner/RRTx/: CMakeLists.txt  RRTx_main.m  package.xml
src/planner/RRTx/launch/: rrtx.launch
src/planner/RRTx/scripts/: rrtx_node.py
src/planner/proposed/forex_nav/: CMakeLists.txt  package.xml
src/planner/proposed/forex_nav/config/: forex_nav.rviz
src/planner/proposed/forex_nav/include/forex_nav/: astar_2d.h  forex_nav_data.h  forex_nav_fsm.h  forex_nav_manager.h  fuzzy_astar_2d.h
src/planner/proposed/forex_nav/launch/: forex_nav.launch  forex_nav_legged.launch
src/planner/proposed/forex_nav/minco/include/forex_nav/minco/: gcopter_2d.hpp  lbfgs.hpp  minco.hpp  minco_wrapper.h  sfc_generator.hpp  trajectory.hpp  trajectory4.hpp
src/planner/proposed/forex_nav/minco/src/: minco_wrapper.cpp
src/planner/proposed/forex_nav/src/: astar_2d.cpp  forex_nav_fsm.cpp  forex_nav_manager.cpp  forex_nav_node.cpp
src/planner/proposed/gen_viewpoint/: CMakeLists.txt  package.xml
src/planner/proposed/gen_viewpoint/launch/: gen_viewpoint.launch
src/planner/proposed/gen_viewpoint/src/: viewpoint_planner_node.cpp
src/planner/proposed/map_predictor/: CMakeLists.txt  package.xml  setup.py
src/planner/proposed/map_predictor/launch/: map_predictor.launch
src/planner/proposed/map_predictor/mapinpaint/: rosmap_cg_kf_predictor_vis.py
src/planner/proposed/map_predictor/scripts/: map_predictor_node.py
src/planner/traditional_planner/: CMakeLists.txt  package.xml
src/planner/traditional_planner/scripts/: traditional_node.py
(+324 files in other folders)
