<?xml version="1.0"?>
<package format="2">
  <name>local_sensing</name>
  <version>0.0.0</version>
  <description>Local sensing simulator: supports FOV (sector) and 360-degree radar-like sensing. Subscribes global pointcloud and odom, publishes occupancy grid.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

</package>
