<?xml version="1.0"?>
<package format="2">
  <name>map_loader</name>
  <version>0.0.0</version>
  <description>Load PCD map files and publish as point cloud</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

</package>
