<?xml version="1.0"?>
<package format="2">
  <name>nav_exp_env</name>
  <version>1.0.0</version>
  <description>
    Navigation exploration environment package: map + local sensing + pose integration.
    Provides an interface for plugging in different planners without binding to any specific planner.
  </description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>local_sensing</exec_depend>
  <exec_depend>map_loader</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>legged_config</exec_depend>

</package>
