<?xml version="1.0"?>
<package format="2">
  <name>traditional_planner</name>
  <version>0.0.0</version>
  <description>Traditional path planner: A* frontend + polynomial smoothing backend</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
