<?xml version="1.0"?>
<package format="2">
  <name>legged_fake_simulator</name>
  <version>0.0.1</version>
  <description>Simple numerical simulator for legged robot that integrates position commands or cmd_vel directly to odom</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>

  <export>
  </export>
</package>
