<?xml version="1.0"?>
<package format="2">
  <name>gen_viewpoint</name>
  <version>0.0.0</version>
  <description>2D viewpoint generator from OccupancyGrid (frontier-based).</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
