<?xml version="1.0"?>
<package format="2">
  <name>map_predictor</name>
  <version>1.0.0</version>
  <description>Map inpainting predictor using neural network</description>

  <maintainer email="lsy@todo.todo">lsy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
  </export>
</package>
